fix containment of text inside #wrap, make Team tables full width

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -44,7 +44,6 @@ body {
     margin-left: 20px;
 }
 #bottom {
-    width:100%;
     margin: 1em;
 }
 #image {
@@ -183,6 +182,8 @@ ul {
     /* shadow */
       -moz-box-shadow: 0 0 1em #888;
       -webkit-box-shadow: 0 0 1em #888;
+      width: 100%;
+      table-layout: fixed;
 }
 .nicetable td {
     padding: 5px;
